@@ -15,6 +15,7 @@
 * Coinbase is no longer a supported payment method. `PaymentMethodNoLongerSupported` will be returned for Coinbase operations.
 * Add Braintree::ApplePay for web domain registration
 * Add facilitated details to Transaction if present
+* Add submit_for_settlement to Braintree::Subscription.retry_charge
 
 == 2.76.0
 * Pass configured gateway to Merchant#_new instead of using global gateway (thanks @cwalsh!)
